# GIP

./: .env.dev  .gitignore  README.md  add_dep_to_all.sh  docker-compose.yml  setup.py
AeroCast_FrontEnd/: package-lock.json
AeroCast_FrontEnd/.github/: copilot-instructions.md
AeroCast_FrontEnd/src/: App.tsx
AeroCast_FrontEnd/src/components/: login-form.tsx  signup-form.tsx  (+2 more)
Aerocast_BackEnd/: main.py
backend/: .env  .env.dev  README.md  docker-compose.yml  nginx.conf  otel_collector.yml  prometheus.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/api/service_auth_api/: pyproject.toml
backend/app/api/service_baggages_api/: main.py  pyproject.toml
backend/app/api/service_meteo_ia_api/: Dockerfile  pyproject.toml
backend/app/core/: db.py
backend/docker/: entrypoint.sh  supervisord.conf
backend/libs/common/: config.py  database.py  exceptions.py  security.py
backend/logstash/pipeline/: logstash.conf
backend/service_auth/: Dockerfile  main.py  pyproject.toml
backend/service_baggages/: main.py  pyproject.toml
backend/service_meteo_ia/: Dockerfile  main.py  pyproject.toml
backend/services/auth/: Dockerfile  README.md  main.py  otel_setup.py  service_user.py
backend/services/auth/core/: hashing.py  jwt.py  roles.py
backend/services/auth/dependencies/: permissions.py  user.py
backend/services/auth/middleware/: logging.py
backend/services/auth/models/: company.py  refresh_token.py  user.py
backend/services/auth/routers/: auth.py
backend/services/auth/schemas/: company.py  user.py
backend/services/baggage/: Dockerfile  README.md  baggage_service.py  main.py  metrics.py  otel_setup.py
backend/services/baggage/core/: enums.py  event.py  utils.py
backend/services/baggage/models/: bag.py  baggage_event.py  scan_log.py
backend/services/baggage/redis/: redis_c.py
backend/services/baggage/routers/: admin.py  baggages.py  gps.py  trackers.py  ws.py
backend/services/baggage/schemas/: bag.py  baggage_event.py  scan_log.py
backend/services/baggage/worker/: consumer.py
backend/services/orientation/: Dockerfile  README.md  main.py
backend/services/weather/: Dockerfile  README.md  main.py  service_weather.py
backend/services/weather/dependencies/: weather_deps.py
backend/services/weather/models/: weather.py
backend/services/weather/routers/: weather.py
backend/services/weather/schemas/: weather.py
backend/services/weather/services/: open_meteo.py
backend/tests/: conftest.py
backend/tests/auth/: test_auth_route.py
backend/tests/baggages/: test_baggages_routes.py  test_ws.py
backend/tests/utils/: db.py  http.py
backend/tests/weather/: test_weather.py
backend/traefik/: dynamic.yml
(+17 files in other folders)
